board post 마무리, board get css in progress
